buildscript {
    repositories {
        mavenCentral()
        jcenter()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.6.RELEASE")
    }
}

// Apply the java plugin to add support for Java
apply plugin: 'java'
apply plugin: 'spring-boot'

jar {
	manifest {
		attributes 'Main-Class': 'com.live106.mars.account.AccountRunner'
	}
    baseName = 'Mars-Account'
    version =  '0.1.0'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

// In this section you declare where to find the dependencies of your project
repositories {
    // Use 'jcenter' for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
    jcenter()
}

sourceSets { 
	main { 
		java { 
			srcDir 'src/main/java'
		}
		resources {
			srcDir 'src/main/java'
			exclude '**/*.properties' 
		}
	}	
}

// In this section you declare the dependencies for your production and test code
dependencies {

	compile project(':Mars-Protocol')

	compile 'org.mybatis:mybatis:3.3.0'
	compile 'org.mybatis.caches:mybatis-memcached:1.0.0'
	compile 'org.mybatis:mybatis-spring:1.2.3'
	compile("org.springframework.boot:spring-boot-starter")
    //compile('org.springframework:spring-context:4.2.1.RELEASE')
    //compile("org.springframework:spring-jdbc:4.2.1.RELEASE")
    
    //compile('org.springframework:spring-context:3.2.13.RELEASE')
    //compile('org.springframework:spring-jdbc:3.2.13.RELEASE')
    //compile('org.springframework.batch:spring-batch-infrastructure:3.0.4.RELEASE')
    
	compile("io.netty:netty-all:5.0.0.Alpha2")
    compile("org.apache.thrift:libthrift:0.9.2")
    compile("mysql:mysql-connector-java:5.1.36")
    
    // The production code uses the SLF4J logging API at compile time
    compile("org.slf4j:slf4j-api:1.7.3")

    // Declare the dependency for your favourite test framework you want to use in your tests.
    // TestNG is also supported by the Gradle Test task. Just change the
    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
    // 'test.useTestNG()' to your build script.
    testCompile 'junit:junit:4.12'
}
applicationDefaultJvmArgs = ["-d64 -server -Xmx2G -Xms2G -Xmn300M -Xss256K -XX:+DisableExplicitGC -XX:SurvivorRatio=1 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+CMSClassUnloadingEnabled -XX:LargePageSizeInBytes=128M -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -XX:+PrintClassHistogram -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintHeapAtGC -Xloggc:gc.log"]
//applicationDefaultJvmArgs = ["-d64 -server -Xmx2G -Xms2G -Xmn300M -XX:PermSize=50M -XX:MaxPermSize=50M -Xss256K -XX:+DisableExplicitGC -XX:SurvivorRatio=1 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSCompactAtFullCollection -XX:CMSFullGCsBeforeCompaction=0 -XX:+CMSClassUnloadingEnabled -XX:LargePageSizeInBytes=128M -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -XX:+PrintClassHistogram -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintHeapAtGC -Xloggc:gc.log"]
